fixed date display, added clear complete, working on mobile add form

--- a/src/styles.css
+++ b/src/styles.css
@@ -571,7 +571,38 @@ textarea {
 	justify-content: center;
 }
 
-@media only screen and (max-width: 650px) {
+
+
+
+/* MOBILE  ADD */
+
+#mobile-add-container {
+	display: none;
+}
+
+#mobile-add-form {
+	width: 100%;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	place-items: center;
+	padding: 0 1rem;
+}
+
+#mobileTitle {
+	flex: 2;
+	margin-right: 0.5rem;
+	height: 30px;
+}
+
+#mobile-submit {
+	border: none;
+	border-radius: 50%;
+	width: 20px;
+	height: 20px;
+}
+
+@media only screen and (max-width: 675px) {
 	#left { flex: 1; }
 	#right { display: none; }
 	.listsLeft {
@@ -582,4 +613,7 @@ textarea {
 		justify-content: center;
 	}
 	.listsRight { display: none; }
+	#mobile-add-container {
+		display: flex;
+	}
 }
